@@ -1,5 +1,5 @@
 package org.irods.jargon.core.utils;
 public final class JargonVersion {
  public static String VERSION="3.3.0-SNAPSHOT";
- public static String BUILD_TIME="20130131-0857";
+ public static String BUILD_TIME="20130201-1142";
 }
